Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Master-gao.GitHub.io by Master-Gao</title>
+    <title>执剑为何 by Master-Gao</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Master-gao.GitHub.io</h1>
-        <h2>个人github博客</h2>
+        <h1>执剑为何</h1>
+        <h2>非淡泊无以明志，非宁静无以致远</h2>
         <a href="https://github.com/Master-Gao" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
